<resources>
    <string name="app_name">STL Maintenance</string>
    <string name="action_settings">Settings</string>
    <string name="save_ticket">Save Ticket</string>
    <string name="get_customers">Download Customer Information</string>
    <string name="get_equipment">Download Item List</string>
    <string name="web_address">Web Address:</string>
    <string name="url_save">Save</string>
    <string name="external_dir_stl">GetSTLSignature</string>
    <string name="external_dir_client">GetClientSignature</string>
    <string name="external_dir">GetSignature</string>

    <string name="splash_title">MAINTENANCE APPLICATION</string>
    <string name="title_activity_main">STL Maintenance</string>
    <string name="maintenance_button">Maintenance</string>
    <string name="servicing_button">Servicing</string>

    <!-- OVERVIEW -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date:&#160; </string>
    <string name="sysaid">Sysaid Id:&#160; </string>
    <string name="tasktype">Task Type:&#160; </string>
    <string name="textview">TextView</string>

    <!-- DELETE -->
    <string-array name="taskTypeArray">
        <item>Preventive Maintenance</item>
        <item>On Call</item>
    </string-array>
    <string-array name="regionArray">
        <item>Ashanti</item>
        <item>Brong-Ahafo</item>
        <item>Greater Accra</item>
        <item>Central</item>
        <item>Eastern</item>
        <item>Northern</item>
        <item>Western</item>
        <item>Upper East</item>
        <item>Upper West</item>
        <item>Volta</item>
    </string-array>
    <string name="customer">Customer: </string>
    <string name="customerAccnt">Customer Account: </string>
    <string name="address">Address: </string>
    <string name="region">Region: </string>
    <string name="getlocation">Get Location</string>
    <string name="getSTLSign">STL Signature</string>
    <string name="getClientSign">Client Signature</string>

    <!-- SERVICING -->
    <string name="firmware">DVR Firmware Update</string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="workstation">Workstation</string>
    <string name="test_computer_performance">Testing of computer performance</string>
    <string name="cleaning_computer">Cleaning of the computer</string>
    <string name="serial_number">Serial Number: </string>
    <string name="remarks">Remarks: </string>
    <string name="dvr">DVR</string>
    <string name="cameras">Servicing and cleaning of Cameras</string>
    <string name="ups_backup_status">Checking UPS backup status</string>
    <string name="ups">UPS: </string>
    <string name="status">Status: </string>
    <string-array name="UPSArray">
        <item>None</item>
        <item>UPS 1.5Kva</item>
        <item>UPS 2.2Kva</item>
    </string-array>
    <string-array name="statusArray">
        <item>Good</item>
        <item>Bad</item>
    </string-array>

    <!-- REPLACEMENT -->
    <string name="hdd">Hard Disk Drive</string>
    <string name="_500GB">500GB, Serial Number: </string>
    <string name="_1TB">1TB, Serial Number: </string>
    <string name="_2TB">2TB, Serial Number: </string>
    <string name="type">Type: </string>
    <string name="monitor">Monitor</string>
    <string name="issues">Other Issues</string>
    <string name="fixbox">Fix Box, Quantity: </string>
    <string name="dome">Dome IR, Quantity: </string>
    <string name="bullet">Bullet IR, Quantity: </string>
    <string name="housing">Housing, Quantity: </string>
    <string name="camera">Cameras</string>
    <string name="serial_numbers">Serial Numbers: </string>
    <string name="power">Power Supply</string>
    <string name="power_supply">12V DC Power Supply</string>
    <string name="power_box">12V DC Power Box</string><!-- DELETE -->


    <!-- MAINTENANCE BASEDATA -->
    <string-array name="mtaskTypeArray">
        <item>None</item>
        <item>AC Maintenance</item>
        <item>UPS Maintenance</item>
        <item>Generator Maintenance</item>
        <item>AVR Maintenance</item>
        <item>Vacuum Cleaning</item>
        <item>Fumigation</item>
    </string-array>
    <string name="phone">Phone: </string>
    <string name="email">E-mail: </string>
    <string name="take_photo">Capture Images</string>

    <!-- TASK -->
    <string name="inventory">Inventory: </string>
    <string name="genset_run_hours">GenSet Run Hours: </string>
    <string name="battery_voltage">Battery Voltage: </string>
    <string name="maintenance">Maintenance Type: </string>
    <string name="quantity">Quantity: </string>
    <string name="addItem">Add Item</string>
    <string-array name="ACMaintenanceArray">
        <item>Checking air flow</item>
        <item>Checking coil and condenser water flow</item>
        <item>Checking for any leak in the refrigerating circuit</item>
        <item>Checking of the electrical connections\' tightening</item>
        <item>Checking of the cooling connections\' tightening</item>
        <item>Checking fans and electric motor bearings</item>
        <item>Checking of the refrigerating circuits and working parameters</item>
        <item>Checking power supply-absorptions-ground insulations</item>
        <item>Checking oil level (if oil sight glass is present)</item>
        <item>Checking pipes insulation</item>
        <item>Checking humidifier</item>
        <item>Add gas</item>
        <item>Back-up AC: Purification Filter Replacement (once a year)</item>
        <item>Checking and cleaning of air filters </item>
        <item>Checking and cleaning of discharges</item>
        <item>De-aeration of the hydraulic circuits</item>
        <item>Checking Cleaning of the air cooled condensers</item>
        <item>Checking the hydraulic circuit filters</item>
        <item>Back-up AC: Clean Air Filters</item>
    </string-array>
    <string-array name="UPSMaintenanceArray">
        <item>Checking of battery state</item>
        <item>Checking of power module state</item>
        <item>Checking of logs and alarms</item>
        <item>Upgrading RIM and MIM</item>
        <item>Upgrading firmware</item>
        <item>Checking of electrical wiring</item>
    </string-array>
    <string-array name="genMaintenanceArray">
        <item>Checking lube oil</item>
        <item>Checking fuel filter</item>
        <item>Checking lube filter</item>
        <item>Checking air filter</item>
        <item>Checking engine oil</item>
        <item>Checking coolant(DCA)</item>
        <item>Checking battery</item>
        <item>Checking fan belt</item>
        <item>Checking engine</item>
        <item>Checking charging alternator</item>
        <item>Checking voltage</item>
        <item>Checking frequency</item>
        <item>Checking load current</item>
        <item>Checking RPM(speed)</item>
        <item>Checking oil pressure</item>
    </string-array>
    <string-array name="AVRMaintenanceArray">
        <item>Blowing and cleaning</item>
        <item>Checking terminals</item>
        <item>Surge protection</item>
        <item>Checking earth leakage</item>
        <item>Checking of boards and components</item>
        <item>Setting and adjustments</item>
        <item>Testing</item>
    </string-array>
    <string-array name="fumigationArray">
        <item>Elimination of breeding grounds</item>
        <item>Indoor residual spraying</item>
        <item>Mist blowing and fogging</item>
        <item>Adulticiding</item>
        <item>Rodenticide spraying</item>
    </string-array>
    <string-array name="vacuumCleaningArray">
        <item>Vacuum the floor</item>
        <item>Clean the racks</item>
        <item>Dust table and chairs</item>
        <item>Vacuum doormats and carpets</item>
    </string-array>

    <!-- SIGN -->
    <string name="STL_name">STL Rep Name:&#160; </string>
    <string name="client_name">Customer Rep Name: </string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="position">Position: </string>
    <string name="title_activity_action_settings">Settings</string>
    <string name="Equipment">Equipment</string>



    <string name="sign_up_here">Sign Up here</string>
    <string name="log_in">log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="site">Site Id: </string>


</resources>
