<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MaintenanceActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/save_tickets"
        android:title="@string/save_ticket"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/get_customers"
        android:title="@string/get_customers"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/get_equipment"
        android:title="@string/get_equipment"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>