<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity"
    android:background="#bfd6fb">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setUsernameEditText"
        android:layout_marginTop="134dp"
        android:layout_alignParentTop="true"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/setPasswordEditText"
        android:layout_below="@+id/setUsernameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPassEditText"
        android:layout_below="@+id/setPasswordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/confirm_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signUpButton"
        style="@style/button_text_small"
        android:background="@drawable/blue_button"
        android:onClick="appSignup"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/confirmPassEditText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/returnToLoginButton"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        style="@style/button_text_small"
        android:background="@drawable/blue_button"
        android:onClick="returnToLogin" />
</RelativeLayout>
