<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.application.sweetiean.stlservicing.Serv_BaseDataFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/baseDataTab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/sysaid"
                android:textSize="@dimen/ordinaryTextsize" />

            <EditText
                android:id="@+id/sysaidIdEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tasktype"
                android:textSize="@dimen/ordinaryTextsize" />

            <Spinner
                android:id="@+id/taskTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/customer"
                android:textSize="@dimen/ordinaryTextsize" />

            <EditText
                android:id="@+id/customerEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text|textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/customerAccnt"
                android:textSize="@dimen/ordinaryTextsize" />

            <EditText
                android:id="@+id/siteIdEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/address"
                android:textSize="@dimen/ordinaryTextsize" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/region"
                android:textSize="@dimen/ordinaryTextsize" />

            <Spinner
                android:id="@+id/regionSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.google.android.gms.maps.SupportMapFragment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/getLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getlocation"
                android:background="@drawable/blue_button"
                style="@style/button_text_small"/>

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/ordinaryTextsize"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/STLSignatureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getSTLSign"
                android:background="@drawable/blue_button"
                style="@style/button_text_small"/>

            <Button
                android:id="@+id/clientSignatureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getClientSign"
                android:background="@drawable/blue_button"
                style="@style/button_text_small"/>

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
