<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.application.sweetiean.stlservicing.ClientSignatureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/cCancel"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:background="@drawable/blue_button"
                style="@style/button_text_small"/>

            <Button
                android:id="@+id/cClear"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:layout_width="0dp"
                android:background="@drawable/blue_button"
                style="@style/button_text_small"/>

            <Button
                android:id="@+id/cSign"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_width="0dp"
                android:background="@drawable/blue_button"
                style="@style/button_text_small"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/client_name"
                android:textSize="@dimen/ordinaryTextsize"/>

            <EditText
                android:id="@+id/clientNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/position"
                android:textSize="@dimen/ordinaryTextsize"/>

            <EditText
                android:id="@+id/ClientPostEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Sign Below..."
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:id="@+id/clientSign"
            android:layout_width="match_parent"
            android:background="@color/wallet_holo_blue_light">

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
